--- a/extensionDirectory/manifest.json
+++ b/extensionDirectory/manifest.json
@@ -2,9 +2,9 @@
     "name": "ExpungeVT!",
     "version": "1.0",
     "description": "Expunge records found on VTCourtsOnline with ease!",
-    "permissions": ["activeTab", "declarativeContent", "storage"],
+    "permissions": ["activeTab", "declarativeContent", "storage","<all_urls>"],
     "background": {
-      "scripts": ["background.js"],
+      "scripts": ["background.js", "./forms/petitionExpunge.js"],
       "persistent": false
     },
     "options_page": "formMenu.html",
@@ -24,5 +24,8 @@
       "128": "images/get_started128.png"
     },
     "manifest_version": 2,
-    "content_security_policy": "script-src 'self' https://code.jquery.com https://cdnjs.cloudflare.com https://stackpath.bootstrapcdn.com https://use.fontawesome.com; object-src 'self'"
+    "content_security_policy": "script-src 'self' https://code.jquery.com https://cdnjs.cloudflare.com https://stackpath.bootstrapcdn.com https://use.fontawesome.com; object-src 'self'",
+    "externally_connectable": {
+      "ids": ["*"]
+    }
   }
