--- a/extensionDirectory/package.json
+++ b/extensionDirectory/package.json
@@ -22,8 +22,10 @@
   },
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "gumshoejs": "^5.1.2",
     "jquery": "^3.4.1",
     "popper": "^1.0.1",
+    "smoothscroll-polyfill": "^0.4.4",
     "vue": "^2.6.10"
   }
 }
