--- a/extensionDirectory/package.json
+++ b/extensionDirectory/package.json
@@ -24,6 +24,7 @@
     "bootstrap": "^4.3.1",
     "gumshoejs": "^5.1.2",
     "jquery": "^3.4.1",
+    "moment": "^2.24.0",
     "popper": "^1.0.1",
     "smoothscroll-polyfill": "^0.4.4",
     "vue": "^2.6.10"
