--- a/extensionDirectory/manifest.json
+++ b/extensionDirectory/manifest.json
@@ -1,8 +1,15 @@
 {
     "name": "ExpungeVT!",
-    "version": "1.0",
+    "version": "1.1",
     "description": "Expunge records found on VTCourtsOnline with ease!",
-    "permissions": ["activeTab", "declarativeContent", "storage","<all_urls>","downloads"],
+    "permissions": ["activeTab", 
+                    "declarativeContent", 
+                    "storage",
+                    "https://secure.vermont.gov/*",
+                    "http://secure.vermont.gov/*",
+                    "https://secure.vermont.gov/",
+                    "http://secure.vermont.gov/",
+                    "downloads"],
     "background": {
       "scripts": ["background.js"],
       "persistent": false
