--- a/extensionDirectory/adminConfig.json
+++ b/extensionDirectory/adminConfig.json
@@ -1,6 +1,6 @@
 {
   "expungeHeadline": "<u><b>The next clinic will be on May 22. Training will be on the 19th.</b></u> Talk to Mairead for more information. And don't forget, you are a bright shining star in the criminal justice reform universe!",
-  "letter: {
+  "letter": {
         "p1": "Thank you for meeting about your sealing and expungement options. We have prepared the following <span v-if='filings.length > 0'>documents</span><span v-else>document</span> for you today:"
   },
   "roleText": {
