--- a/extensionDirectory/package.json
+++ b/extensionDirectory/package.json
@@ -6,9 +6,11 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.13.0",
     "bootstrap": "^4.4.1",
+    "gumshoejs": "^5.1.2",
     "jquery": "^3.5.0",
     "moment": "^2.24.0",
     "popper.js": "^1.16.0",
+    "smooth-scroll": "^16.1.3",
     "vue": "^2.6.11"
   },
   "devDependencies": {},
