--- a/extensionDirectory/adminConfig.json
+++ b/extensionDirectory/adminConfig.json
@@ -1,5 +1,5 @@
 {
-  "expungeHeadline": "<u><b>The next clinic will be on May 22. Training will be on the 19th.</b></u> Talk to Mairead for more information. And don't forget, you are a bright shining star in the rapidly expanding universe of criminal justice reform!",
+  "expungeHeadline": "<u><b>The next clinic will be on May 22. Training will be on the 19th.</b></u> Talk to Mairead for more information. And don't forget, you are a bright shining star in the rapidly expanding universe of criminal justice reform! <i class="fas fa-star"></i> <i class="fas fa-meteor"></i>",
   "letter": {
         "p1": ""
   },
