--- a/extensionDirectory/manifest.json
+++ b/extensionDirectory/manifest.json
@@ -4,12 +4,7 @@
     "description": "Expunge records found on VTCourtsOnline with ease!",
     "permissions": ["storage",
                     "declarativeContent",
-                    "https://secure.vermont.gov/*",
-                    "http://secure.vermont.gov/*",
-                    "https://secure.vermont.gov/",
-                    "http://secure.vermont.gov/",
-                    "https://www.codeforbtv.org/*",
-                    "file://*/*",
+                    "activeTab",
                     "downloads"],
     "background": {
       "scripts": ["background.js"],
