--- a/extensionDirectory/manifest.json
+++ b/extensionDirectory/manifest.json
@@ -1,7 +1,7 @@
 {
     "name": "ExpungeVT!",
-    "version": "2.0",
-    "description": "Expunge records found on VTCourtsOnline with ease!",
+    "version": "2.2",
+    "description": "Expunge and seal records found on VTCourtsOnline with ease!",
     "permissions": ["storage",
                     "declarativeContent",
                     "activeTab",
