--- a/extensionDirectory/package.json
+++ b/extensionDirectory/package.json
@@ -12,7 +12,9 @@
     "smooth-scroll": "^16.1.3",
     "vue": "^2.6.11"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "prettier": "^2.0.5"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
