--- a/extensionDirectory/package.json
+++ b/extensionDirectory/package.json
@@ -16,6 +16,8 @@
     "prettier": "^2.0.5"
   },
   "scripts": {
+    "pretty-up": "npx prettier --write \"./**/*.{js,html,css}\"",
+    "pretty-check": "npx prettier --check \"./**/*.{js,html,css}\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
