--- a/extensionDirectory/manifest.json
+++ b/extensionDirectory/manifest.json
@@ -1,7 +1,7 @@
 {
     "name": "ExpungeVT!",
-    "version": "3.0 Odisee Edition",
-    "description": "Expunge and seal Vermont records with ease!",
+    "version": "3.0.0",
+    "description": " Odisee Edition - Expunge and seal Vermont records with ease!",
     "permissions": ["storage",
                     "declarativeContent",
                     "activeTab",
