--- a/extensionDirectory/manifest.json
+++ b/extensionDirectory/manifest.json
@@ -1,33 +1,30 @@
 {
-    "name": "ExpungeVT!",
-    "version": "3.1.0",
-    "description": " Odisee Edition - Expunge and seal Vermont records with ease!",
-    "permissions": ["storage",
-                    "declarativeContent",
-                    "activeTab",
-                    "downloads"],
-    "background": {
-      "scripts": ["background.js"],
-      "persistent": false
-    },
-    "page_action": {
-      "default_popup": "popup.html",
-      "default_icon": {
-        "16": "images/icon_16.png",
-        "32": "images/icon_32.png",
-        "48": "images/icon_48.png",
-        "128": "images/icon_128.png"
-      }
-    },
-    "icons": {
+  "name": "ExpungeVT!",
+  "version": "3.2.1",
+  "description": " Odisee Edition - Expunge and seal Vermont records with ease!",
+  "permissions": ["storage", "declarativeContent", "activeTab", "downloads"],
+  "background": {
+    "scripts": ["background.js"],
+    "persistent": false
+  },
+  "page_action": {
+    "default_popup": "popup.html",
+    "default_icon": {
       "16": "images/icon_16.png",
       "32": "images/icon_32.png",
       "48": "images/icon_48.png",
       "128": "images/icon_128.png"
-    },
-    "manifest_version": 2,
-    "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'",
-    "externally_connectable": {
-      "ids": ["*"]
     }
+  },
+  "icons": {
+    "16": "images/icon_16.png",
+    "32": "images/icon_32.png",
+    "48": "images/icon_48.png",
+    "128": "images/icon_128.png"
+  },
+  "manifest_version": 2,
+  "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'",
+  "externally_connectable": {
+    "ids": ["*"]
   }
+}
