--- a/extensionDirectory/package.json
+++ b/extensionDirectory/package.json
@@ -13,12 +13,15 @@
     "vue": "^2.6.11"
   },
   "devDependencies": {
+    "parcel-bundler": "^1.12.4",
     "prettier": "^2.0.5"
   },
   "scripts": {
     "pretty-up": "npx prettier --write \"./**/*.{js,html,css}\"",
     "pretty-check": "npx prettier --check \"./**/*.{js,html,css}\"",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "watch": "rm -rf dist && mkdir dist && cp -r {manifest.json,images} dist && parcel watch src/*.html src/background.js",
+    "build": "rm -rf dist && mkdir dist && cp -r {manifest.json,images} dist && parcel build src/*.html src/background.js"
   },
   "keywords": [],
   "author": "",
