--- a/extensionDirectory/package.json
+++ b/extensionDirectory/package.json
@@ -16,7 +16,11 @@
     "parcel-bundler": "^1.12.4",
     "prettier": "^2.0.5"
   },
+  "resolutions": {
+    "@babel/preset-env": "7.13.8"
+  },
   "scripts": {
+    "preinstall": "npx npm-force-resolutions",
     "pretty-up": "npx prettier --write \"./**/*.{js,html,css}\"",
     "pretty-check": "npx prettier --check \"./**/*.{js,html,css}\"",
     "test": "echo \"Error: no test specified\" && exit 1",
