WIP: add vue-template-compiler to properly build vue components
After including components.js there was a console warning explaining
that we were using a runtime-only vue build that was not able to handle
the vue components we had created:

> "[Vue warn]: You are using the runtime-only build of Vue where the template compiler is not available. Either pre-compile the templates into render functions, or use the compiler-included build.
(found in <Root>)

Apparently the runtime build is the default, but by including vue-template-compiler
as a dev dependency, and adding a vue.config.js file indicating that
it should be used, the errors go away.

NOTE: apparently "this will include additional JavaScript payload
into your distribution."

See: https://stackoverflow.com/a/60270464/263900
See: https://github.com/parcel-bundler/parcel/issues/2178
See: https://vue-loader.vuejs.org/guide/#manual-setup

--- a/extensionDirectory/package.json
+++ b/extensionDirectory/package.json
@@ -16,7 +16,9 @@
   },
   "devDependencies": {
     "parcel-bundler": "^1.12.4",
-    "prettier": "^2.0.5"
+    "prettier": "^2.0.5",
+    "vue-loader": "^15.9.6",
+    "vue-template-compiler": "^2.6.12"
   },
   "resolutions": {
     "@babel/preset-env": "7.13.8"
