WIP: properly build vue components... for real
I don't know why it looked like commit 07d659 helped anything; it
did not.

After reading a tutorial from scratch about how to build Vue with
parcel (https://scotch.io/tutorials/using-parcel-in-a-vuejs-app) I
basically rolled back changes from 07d659 and added an 'alias' to
package.json which seems to have done the trick.

GTK: the vue package that npm installs includes several different
compilers in node_modules/vue/dist and one of them is the heavier
binary that includes the compiler necessary to render our current
vue components. Apparently you can set an alias in the package.json
file that lets you dictate which compiler should be used during
the parcel build.

--- a/extensionDirectory/package.json
+++ b/extensionDirectory/package.json
@@ -16,12 +16,13 @@
   },
   "devDependencies": {
     "parcel-bundler": "^1.12.4",
-    "prettier": "^2.0.5",
-    "vue-loader": "^15.9.6",
-    "vue-template-compiler": "^2.6.12"
+    "prettier": "^2.0.5"
   },
   "resolutions": {
     "@babel/preset-env": "7.13.8"
+  },
+  "alias": {
+    "vue": "./node_modules/vue/dist/vue.common.js"
   },
   "scripts": {
     "preinstall": "npx npm-force-resolutions",
