WIP: fix 'parcel watch' websocket error
When using 'parcel watch' to rebuild the extension as files change, the websocket that parcel generates when visiting the 'Filings' page was breaking.

The solution was to add the '--hmr-hostname' flag to the watch script.

This parcel issue explains the problem I was facing: https://github.com/parcel-bundler/parcel/issues/5254

--- a/extensionDirectory/package.json
+++ b/extensionDirectory/package.json
@@ -30,7 +30,7 @@
     "pretty-check": "npx prettier --check \"./**/*.{js,html,css}\"",
     "test": "echo \"Error: no test specified\" && exit 1",
     "copy-assets": "cp -r {manifest.json,images,css,src/payload.js} dist",
-    "watch": "rm -rf dist && mkdir dist && npm run copy-assets && parcel watch src/*.html src/background.js",
+    "watch": "rm -rf dist && mkdir dist && npm run copy-assets && parcel watch src/*.html src/background.js --hmr-hostname localhost",
     "build": "rm -rf dist && mkdir dist && npm run copy-assets && parcel build src/*.html src/background.js"
   },
   "keywords": [],
