--- a/extensionDirectory/manifest.json
+++ b/extensionDirectory/manifest.json
@@ -22,6 +22,9 @@
     "48": "images/icon_48.png",
     "128": "images/icon_128.png"
   },
+  "web_accessible_resources": [
+    "*.*.js.map"
+  ],
   "manifest_version": 2,
   "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'",
   "externally_connectable": {
