--- a/extensionDirectory/manifest.json
+++ b/extensionDirectory/manifest.json
@@ -1,10 +1,17 @@
 {
   "name": "ExpungeVT!",
-  "version": "3.2.1",
+  "version": "3.3.0",
   "description": " Odisee Edition - Expunge and seal Vermont records with ease!",
-  "permissions": ["storage", "declarativeContent", "activeTab", "downloads"],
+  "permissions": [
+    "storage",
+    "declarativeContent",
+    "activeTab",
+    "downloads"
+  ],
   "background": {
-    "scripts": ["background.js"],
+    "scripts": [
+      "background.js"
+    ],
     "persistent": false
   },
   "page_action": {
@@ -25,6 +32,8 @@
   "manifest_version": 2,
   "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'",
   "externally_connectable": {
-    "ids": ["*"]
+    "ids": [
+      "*"
+    ]
   }
 }
