--- a/extensionDirectory/manifest.json
+++ b/extensionDirectory/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "ExpungeVT!",
   "version": "4.0",
-  "description": " Odisee Edition - Expunge and seal Vermont records with ease!",
+  "description": "Co-counsel Edition - Expunge Harder. Expunge Smarter.",
   "permissions": [
     "storage",
     "declarativeContent",
