--- a/extensionDirectory/package.json
+++ b/extensionDirectory/package.json
@@ -15,14 +15,19 @@
   },
   "devDependencies": {
     "esbuild": "^0.14.42",
+    "npm-run-all": "^4.1.5",
     "prettier": "^2.0.5"
   },
   "scripts": {
     "pretty-up": "npx prettier --write \"./**/*.{js,html,css}\"",
     "pretty-check": "npx prettier --check \"./**/*.{js,html,css}\"",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "esbuild --bundle ./index.js --outfile=../extensionDirectory-build/index.js", 
-    "build:watch": "esbuild --bundle ./index.js --outfile=../extensionDirectory-build/index.js --watch"
+    "build": "run-p :build:index :build:payload", 
+    ":build:index": "esbuild --bundle ./index.js --outfile=../extensionDirectory-build/index.js",
+    ":build:payload": "esbuild --bundle ./payload.js --outfile=../extensionDirectory-build/payload.js",
+    "build:watch": "run-p :build:watch:index :build:watch:payload",
+    ":build:watch:index": "esbuild --bundle ./index.js --outfile=../extensionDirectory-build/index.js --watch",
+    ":build:watch:payload": "esbuild --bundle ./payload.js --outfile=../extensionDirectory-build/payload.js --watch"
   },
   "keywords": [],
   "author": "",
