--- a/extensionDirectory/package.json
+++ b/extensionDirectory/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@vue/compiler-sfc": "^3.2.37",
     "esbuild": "^0.14.42",
+    "esbuild-copy-static-files": "^0.1.0",
     "esbuild-plugin-vue3": "^0.3.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.0.5"
