--- a/extensionDirectory/static/manifest.json
+++ b/extensionDirectory/static/manifest.json
@@ -3,10 +3,11 @@
   "version": "4.1.1",
   "description": "Co-counsel Edition - Expunge Harder. Expunge Smarter.",
   "permissions": [
-    "storage",
-    "declarativeContent",
     "activeTab",
-    "downloads"
+    "declarativeContent",
+    "downloads",
+    "scripting",
+    "storage"
   ],
   "background": {
     "service_worker": "background.js"
