--- a/extensionDirectory/package.json
+++ b/extensionDirectory/package.json
@@ -9,7 +9,7 @@
     "bootstrap4-toggle": "^3.6.1",
     "gumshoejs": "^5.1.2",
     "jquery": "^3.6.0",
-    "moment": "^2.29.3",
+    "moment": "^2.29.4",
     "popper.js": "^1.16.1",
     "smooth-scroll": "^16.1.3",
     "vue": "^3.1.0"
@@ -28,7 +28,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "node build.js",
     "build:watch": "echo 'TODO: Setup watch building'",
-    "postbuild": "npm i --production --prefix=./build"
+    "postbuild": "cp ./package.json ./build/ && npm i --production --prefix=./build"
   },
   "keywords": [],
   "author": "",
