--- a/package.json
+++ b/package.json
@@ -4,13 +4,9 @@
   "description": "",
   "main": "background.js",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
+    "build": "vite build --emptyOutDir",
     "pretty-up": "npx prettier --write \"./**/*.{js,html,css}\"",
-    "pretty-check": "npx prettier --check \"./**/*.{js,html,css}\"",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build:old": "node build.js",
-    "build:watch": "echo 'TODO: Setup watch building'"
+    "pretty-check": "npx prettier --check \"./**/*.{js,html,css}\""
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.13.0",
