--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,10 @@
 {
+    "json.schemas": [{
+        "fileMatch": [
+            "manifest.json"
+        ],
+        "url": "https://json.schemastore.org/chrome-manifest"
+    }],
     "markdownlint.config": {
         "MD004": {
             "style": "dash"
