--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,6 @@ typings/
 extensionDirectory-build/index.css
 extensionDirectory-build/index.js
 extensionDirectory-build/payload.js
+
+# chrome store files
+build.zip
