--- a/extensionDirectory/package.json
+++ b/extensionDirectory/package.json
@@ -7,20 +7,23 @@
     "@fortawesome/fontawesome-free": "^5.13.0",
     "bootstrap": "^4.4.1",
     "bootstrap4-toggle": "^3.6.1",
+    "dayjs": "^1.11.9",
     "gumshoejs": "^5.1.2",
     "jquery": "^3.6.0",
-    "moment": "^2.29.4",
     "popper.js": "^1.16.1",
     "smooth-scroll": "^16.1.3",
     "vue": "^3.1.0"
   },
   "devDependencies": {
     "@vue/compiler-sfc": "^3.2.37",
+    "chai": "^4.3.7",
     "esbuild": "^0.17.5",
     "esbuild-copy-static-files": "^0.1.0",
     "esbuild-plugin-vue3": "^0.3.0",
+    "mocha": "^10.2.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.0.5"
+    "prettier": "^2.0.5",
+    "puppeteer": "^20.9.0"
   },
   "scripts": {
     "pretty-up": "npx prettier --write \"./**/*.{js,html,css}\"",
