--- a/extensionDirectory/package.json
+++ b/extensionDirectory/package.json
@@ -28,7 +28,7 @@
   "scripts": {
     "pretty-up": "npx prettier --write \"./**/*.{js,html,css}\"",
     "pretty-check": "npx prettier --check \"./**/*.{js,html,css}\"",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "node ./node_modules/mocha/bin/mocha.js --require mocha-fixtures.mjs --config .mocharc.js **/*.spec.mjs",
     "build": "node build.js",
     "build:watch": "echo 'TODO: Setup watch building'",
     "postbuild": "cp ./package.json ./build/ && npm i --production --prefix=./build"
