--- a/extensionDirectory/package.json
+++ b/extensionDirectory/package.json
@@ -10,6 +10,8 @@
     "dayjs": "^1.11.9",
     "gumshoejs": "^5.1.2",
     "jquery": "^3.6.0",
+    "object-hash": "^3.0.0",
+    "pinia": "^2.1.7",
     "popper.js": "^1.16.1",
     "smooth-scroll": "^16.1.3",
     "vue": "^3.1.0"
@@ -31,7 +33,7 @@
     "test": "node ./node_modules/mocha/bin/mocha.js --require mocha-fixtures.mjs --config .mocharc.js **/*.spec.mjs",
     "build": "node build.js",
     "build:watch": "echo 'TODO: Setup watch building'",
-    "postbuild": "cp ./package.json ./build/ && npm i --production --prefix=./build"
+    "postbuild": "cp ./package.json ./build/ && npm i --omit=dev --prefix=./build"
   },
   "keywords": [],
   "author": "",
