--- a/extensionDirectory/package.json
+++ b/extensionDirectory/package.json
@@ -1,6 +1,6 @@
 {
   "name": "expungevt",
-  "version": "3.3.0",
+  "version": "5.1.2",
   "description": "",
   "main": "background.js",
   "dependencies": {
@@ -20,7 +20,6 @@
     "@vue/compiler-sfc": "^3.2.37",
     "chai": "^4.3.7",
     "esbuild": "^0.17.5",
-    "esbuild-copy-static-files": "^0.1.0",
     "esbuild-plugin-vue3": "^0.3.0",
     "mocha": "^10.2.0",
     "npm-run-all": "^4.1.5",
@@ -32,8 +31,7 @@
     "pretty-check": "npx prettier --check \"./**/*.{js,html,css}\"",
     "test": "node ./node_modules/mocha/bin/mocha.js --require mocha-fixtures.mjs --config .mocharc.js **/*.spec.mjs",
     "build": "node build.js",
-    "build:watch": "echo 'TODO: Setup watch building'",
-    "postbuild": "cp ./package.json ./build/ && npm i --omit=dev --prefix=./build"
+    "build:watch": "echo 'TODO: Setup watch building'"
   },
   "keywords": [],
   "author": "",
